# wlr-competition-2025

./: .gitignore  .gitmodules  README.md  setup_libtorch.sh
aow_controllers/: CMakeLists.txt  package.xml
aow_controllers/config/: controller_executor_config.yaml  custom_controller_config.yaml  end2end_controller_config.yaml  pure_pursuit_controller_config.yaml
aow_controllers/include/aow_controllers/: controller_executor.hpp
aow_controllers/include/aow_controllers/common/: base_controller.hpp
aow_controllers/include/aow_controllers/example_controllers/custom/: custom_controller_class.hpp
aow_controllers/include/aow_controllers/example_controllers/end2end/: end2end_controller_class.hpp
aow_controllers/include/aow_controllers/example_controllers/pure_pursuit/: pure_pursuit_controller_class.hpp
aow_controllers/include/aow_controllers/utils/: aow_robot_config.hpp  trajectory_utils.hpp
aow_controllers/launch/: custom_controller.launch.py  end2end.launch.py  pure_pursuit.launch.py
aow_controllers/plotting/: bad_debug.xml  debug.xml  debug_end2end.xml
aow_controllers/rviz/: debug.rviz  end2end.rviz  pure_pursuit.rviz
aow_controllers/src/: controller_executor.cpp
aow_controllers/src/example_controllers/custom/: custom_controller_class.cpp
aow_controllers/src/example_controllers/end2end/: end2end_controller_class.cpp
aow_controllers/src/example_controllers/end2end/end2end_policy/: aow_end2end_policy.pt  aow_end2end_policy_2.pt  aow_end2end_policy_3.pt  end2end_policy_deployment.jit
aow_controllers/src/example_controllers/pure_pursuit/: pure_pursuit_controller_class.cpp
aow_controllers/src/example_controllers/pure_pursuit/locomotion_policy/: aow_locomotion_policy_2.pt  aow_locomotion_policy_3ms.pt
aow_controllers/src/utils/: ps5_twist_controller.py  trajectory_utils.cpp
aow_controllers/src/utils/PathTrackScore/: README_simple.md  pts_metric_simple.py
aow_controllers/src/utils/trajectory_generation/: trajectory_generator.py
aow_controllers/src/utils/trajectory_generation/example_trajectory_csv/: rsl_path_scale5.0_rounds1.csv  rsl_path_scale5.0_rounds2.csv
aow_description_ros2/: CMakeLists.txt  README.md  package.xml
aow_description_ros2/config/: aow.rviz
aow_description_ros2/env_hooks/: aow_description_ros2.dsv.in
aow_description_ros2/launch/: load.launch.py
aow_description_ros2/meshes/base/: base_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/base/battery/: battery_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/base/docking_socket/: docking_socket_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/base/face/: face_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/base/hbc_receiver/: hbc_receiver_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/base/sensors/depth_camera/: realsense_d435_face_3_6_0.urdf.xacro  realsense_d435_side_3_6_0.urdf.xacro
aow_description_ros2/meshes/base/sensors/lidar/: velodyne_3_6_0.urdf.xacro
aow_description_ros2/meshes/base/sensors/wide_angle_camera/: blackfly_s_3_6_0.urdf.xacro
aow_description_ros2/meshes/base/shell/: bottom_shell_3_6_0_macro.urdf.xacro  face_shell_3_6_0_macro.urdf.xacro  hatch_shell_3_6_0_macro.urdf.xacro  top_shell_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/: leg_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/drives/: drive_3_2_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/foot/: foot_3_6_0_macro.urdf.xacro  foot_3_6_1_macro.urdf.xacro  foot_3_6_2_macro.urdf.xacro
aow_description_ros2/meshes/leg/haa/: haa_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/hfe/: hfe_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/hip/: hip_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/kfe/: kfe_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/mount/: anymal_mount.dae  anymal_mount_barry_macro.urdf.xacro  anymal_mount_macro.urdf.xacro  anymal_mount_parameter.urdf.xacro  anymal_mount_parameter_barry.urdf.xacro  barry_mount.dae
aow_description_ros2/meshes/leg/shank/: shank_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/thigh/: thigh_3_6_0_macro.urdf.xacro
aow_description_ros2/meshes/leg/wheel/: anymal_wheel_w11.dae
aow_description_ros2/urdf/: aow.urdf
aow_gazebo_ros2/: CMakeLists.txt  README.md  package.xml
aow_gazebo_ros2/config/: aow_gz_bridge.yaml
aow_gazebo_ros2/launch/: gazebo.launch.py
aow_gazebo_ros2/rviz/: aow_gazebo.rviz
aow_gazebo_ros2/worlds/: empty.world
aow_sim_worlds/: CMakeLists.txt  package.xml
aow_sim_worlds/env_hooks/: aow_sim_worlds.dsv.in
aow_sim_worlds/models/COLOSSEUM/: model.config  model.sdf
aow_sim_worlds/src/: publish_mesh_node.cpp
aow_sim_worlds/worlds/: COLOSSEUM.world
aow_wlr_rviz2/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
aow_wlr_rviz2/include/wlr_plugins/wlr_panel/: reset_panel.hpp  wlr_panel.hpp
aow_wlr_rviz2/src/wlr_plugins/: reset_panel.cpp  wlr_panel.cpp
