<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aow_gazebo_ros2</name>
  <version>1.0.0</version>
  <description>Gazebo simulation for AOW robot</description>
  <maintainer email="per.a.frivik@gmail.com">perfrivik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Gazebo dependencies -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  
  <!-- AOW dependencies -->
  <exec_depend>aow_description_ros2</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
