<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aow_sim_worlds</name>
  <version>0.1.0</version>
  <description>Collection of BLK-captured Gazebo world files from the Autonomous Digital Twin project</description>
  <maintainer email="areske@ethz.ch">Alexander Reske</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
